--- a/00-C1/04-Exercise4.Rmd
+++ b/00-C1/04-Exercise4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Statistics with R"
-subtitle: "R for Actuarial Students"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -9,10 +9,31 @@ output:
       countIncrementalSlides: false
 ---
 
+* Introduction to R for Actuarial Students
 
-```{r}
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 4 - Regression Analysis
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 ```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
+
+
 
 A recent study suggests that the maximum heart rate of a person, related to age in
 years, is given by the equation:
@@ -22,7 +43,7 @@ $$ \mbox{Max Rate} = 220 – \mbox{Age}$$
 Suppose this is to be empirically proven and 15 people of varying ages are tested for
 their maximum heart rate. 
 
-
+---
 
 The following data are collected:
 
@@ -34,8 +55,8 @@ The following data are collected:
 The data can be entered into R using the following commands:
 
 <pre><code>
-x &lt;- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
-y &lt;- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
+x <- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
+y <- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
 </code></pre>
 
 ---
@@ -44,29 +65,29 @@ y &lt;- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
 
 Plot the fitted line for the regression of Max Rate on Age.
 
-
-
-```{r}
+<pre><code>
 x <- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
 
 y <- c(202,186,187,180,156,169,174,172,153,199,193,174,198,183,178)
 
-plot(x,y)
-```
+plot(x,y, pch=18,col="red",cex=2)
+</code></pre>
 
 ---
-![png](output_4_0.png)
+### Scatterplot
 
+```{r echo=FALSE,warning=FALSE}
+x <- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
 
+y <- c(202,186,187,180,156,169,174,172,153,199,193,174,198,183,178)
 
-```{r}
-plot(x,y,pch=18)
+plot(x,y, pch=18,col="red",cex=2)
 ```
 
 
-![png](output_5_0.png)
+---
 
---
+### Regression model
 
 ```{r}
 lm.result = lm(y ~ x)
@@ -79,60 +100,57 @@ lm.result = lm(y ~ x)
 lm.result
 ```
 
+---
 
-* 
-* Call:
-* lm(formula = y ~ x)
-* 
-* Coefficients:
-* (Intercept) x  
-*    210.0485*   -0.7977  
-
-
-
-
-```{r}
+<pre><code>
 # make a plot
-plot(x,y,pch=18)
+plot(x,y,pch=18,cex=2,col="blue")
 
 # plot the regression line
-abline(lm(y ~ x)) 
+abline(lm(y ~ x), col="red") 
 
+</code></pre>
+
+---
+
+```{r echo=FALSE,warning=FALSE}
+# make a plot
+plot(x,y,pch=18,cex=2,col="blue")
+
+# plot the regression line
+abline(lm(y ~ x), col="red")
 
 ```
 
 
-![png](output_8_0.png)
-
+---
 
 
 ```{r}
 summary(lm.result)
 ```
 
-
-* 
-* Call:
-* lm(formula = y ~ x)
-* 
-* Residuals:
-* * Min*   1Q  Median*   3Q*  Max 
-* -8.9258 -2.5383  0.3879  3.1867  6.6242 
-* 
-* Coefficients:
- *  Estimate Std. Error t value Pr(>|t|)* 
-* (Intercept) 210.04846* 2.86694   73.27  < 2e-16 ***
-* x -0.79773* 0.06996  -11.40 3.85e-08 ***
-* ---
-* Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-* 
-* Residual standard error: 4.578 on 13 degrees of freedom
-* Multiple R-squared:  0.9091,	Adjusted R-squared:  0.9021 
-* F-statistic:   130 on 1 and 13 DF,  p-value: 3.848e-08
-
+---
 
 
 Max heart rate reduces as age increases. The fit of the model seems good.
+
+---
+
+
+```{r}
+coef(lm.result)
+```
+
+
+```{r}
+confint(lm.result)
+```
+
+
+---
+
+
 
 ## Exercise 2
 
@@ -152,13 +170,13 @@ confint(lm.result) %>% round(2)
 
 ## Exercise 3
 
-Calculate the p-value of a hypothesis test for this suggestion, by creating a suitable test statistic.
+Calculate the p-value of a hypothesis test for this suggestion, by creating a suitable test statistic.
 
 
 * Can do a test to see if the slope of -1 is correct. 
 
 
-* Let $H_0$ be that $\beta = -1$, and $H_A$ be that $\beta \neq -1 $. 
+* Let $H_0$ be that $\beta = -1$, and $H_A$ be that $\beta \neq -1$. 
 
 
 * Then we can create the test statistic and the p-value as follows:
@@ -173,42 +191,6 @@ es %>% round(3)
 ```
 
 
-<dl class="dl-horizontal">
-	<dt>1</dt>
-		<dd>6.311</dd>
-	<dt>2</dt>
-		<dd>-5.701</dd>
-	<dt>3</dt>
-		<dd>-3.105</dd>
-	<dt>4</dt>
-		<dd>-2.128</dd>
-	<dt>5</dt>
-		<dd>-2.196</dd>
-	<dt>6</dt>
-		<dd>2.029</dd>
-	<dt>7</dt>
-		<dd>-8.926</dd>
-	<dt>8</dt>
-		<dd>6.624</dd>
-	<dt>9</dt>
-		<dd>0.388</dd>
-	<dt>10</dt>
-		<dd>4.108</dd>
-	<dt>11</dt>
-		<dd>1.299</dd>
-	<dt>12</dt>
-		<dd>-2.544</dd>
-	<dt>13</dt>
-		<dd>2.311</dd>
-	<dt>14</dt>
-		<dd>4.063</dd>
-	<dt>15</dt>
-		<dd>-2.533</dd>
-</dl>
-
-
-
-
 ```{r}
 b1 <- (coef(lm.result))[['x']] #the x part of the coefficients
 n  <-  15
@@ -219,19 +201,46 @@ n
 ```
 
 
--0.798
+---
 
+### Residual Standard Error
 
+Under the assumption that the population error term has a constant variance, the mean square error (MSE) of the regression is the estimate of that variance, and is given by:
 
-15
+$${\displaystyle {\hat {\sigma }}_{\varepsilon }^{2}={\frac {SSR}{n-2}}.\,}$$
 
-
+The residual standard error is the square root of the MSE.
 
 ```{r}
+#calculate residual standard error
 s  <-  sqrt( sum( es^2 ) / (n-2) )
-SE <-  s/sqrt(sum((x-mean(x))^2))
+s
+
 ```
 
+```{r}
+
+sqrt(deviance(lm.result)/df.residual(lm.result))
+
+```
+---
+The standard errors of the parameter estimates are given by
+
+$${\displaystyle {\hat {\sigma }}_{\beta _{1}}={\hat {\sigma }}_{\varepsilon }{\sqrt {\frac {1}{\sum (x_{i}-{\bar {x}})^{2}}}}}$$
+
+$${\displaystyle {\hat {\sigma }}_{\beta _{0}}={\hat {\sigma }}_{\varepsilon }{\sqrt {{\frac {1}{n}}+{\frac {{\bar {x}}^{2}}{\sum (x_{i}-{\bar {x}})^{2}}}}}={\hat {\sigma }}_{\beta _{1}}{\sqrt {\frac {\sum x_{i}^{2}}{n}}}.}$$
+
+```{r}
+
+
+SE <-  s/sqrt(sum((x-mean(x))^2))
+SE
+```
+
+
+---
+
+### Test Statistic
 
 ```{r}
 t  <-  (b1 - (-1) )/SE
@@ -249,10 +258,11 @@ pt(t,13,lower.tail=FALSE)
 ```
 
 
-0.00631015669476853
 
 ---
 
+
+### P-value
 
 
 The p-value is twice this as the problem is two-sided,
@@ -267,7 +277,7 @@ The p-value is twice this as the problem is two-sided,
 ---
 
 ## Exercise 4
-Comment on the researcher’s suggestion, using your answer to part (iii).
+Comment on the researcher’s suggestion, using your answer to part 3.
 
 
 
@@ -275,3 +285,6 @@ Comment on the researcher’s suggestion, using your answer to part (iii).
 The null hypothesis is rejected at the 5% level of significance. The slope may not be
 equal to -1 for these data. (Which is the slope predicted by the original formula 220 -
 Age.)
+
+
+---
