--- a/00-E1-CS1B-FIA-September-2020/03-Exercise3.Rmd
+++ b/00-E1-CS1B-FIA-September-2020/03-Exercise3.Rmd
@@ -1,11 +1,50 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-3 A machine in a sweet factory fills bags of sweets to weigh 500 grams. The actual
-weight of the sweet bags is known to follow a Normal distribution. The sweet
-manufacturer believes that the machine is under-filling the sweet bags. A sample of
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 3 - Hypothesis Testing with ***t.test()***
+
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
+
+A machine in a sweet factory fills bags of sweets to weigh 500 grams. The actual
+weight of the sweet bags is known to follow a Normal distribution. 
+
+The sweet manufacturer believes that the machine is under-filling the sweet bags. A sample of
 10 sweet bags is taken and weighed, as summarised below.
 
-Bag 1 2 3 4 5 6 7 8 9 10
-Weight (grams) 474.11 512.01 493.64 495.03 518.13 486.03 494.48 501.76 498.83 503.02
+|  |  |  |  |  ||  |  |  |  |  |
+|---|---|---|---|---|---|---|---|---|---|---|
+|Bag | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 |
+|Weight (grams) | 474.11 | 512.01 | 493.64 | 495.03 | 518.13 | 486.03 | 494.48 | 501.76 | 498.83 | 503.02 |
 
 ---
 
@@ -14,16 +53,45 @@ The data can be entered into R using the following code:
 
 
 ```{r}
-weight=c(474.11,512.01,493.64,495.03,518.13,486.03,
+weight<-c(474.11,512.01,493.64,495.03,518.13,486.03,
 494.48,501.76,498.83,503.02)
 ```
 
+#### Exercises
+
+
+1. Perform a suitable t-test to determine whether the sweet bags are being
+consistently under-filled, stating the hypotheses and the level of significance
+used in the test. 
+
+2. Propose an interpretation of your conclusion in part 1. 
+
+
 ---
 
-(i) Perform a suitable t-test to determine whether the sweet bags are being
-consistently under-filled, stating the hypotheses and the level of significance
-used in the test. [8]
-(ii) Propose an interpretation of your conclusion in part (i). [2]
+
+The test has the null hypothesis that the mean sweet bag weight is equal to 500 grams, and 
+the alternative hypothesis that the mean sweet bag weight is less than 500 grams. 
+```{r}
+t.test(weight,mu=500,alternative="less")
+```
+Remark: we run a one-sided t-test (as we are concerned with the one 
+sided scenario of ‘under-filling’)
+
+---
+
+
+#### Interpreting the p-value
+
+The test has been performed at the 5% significance level. Since the p-value of 0.287 is not 
+less than the significance level of 0.05, we cannot reject the null hypothesis. 
+
+
+#### Conclusion
+
+Since we cannot reject the null hypothesis that the mean sweet bag weight is 500 grams, in 
+favour of the alternative that the mean sweet bag weight is less than 500 grams, 
+there is insufficient evidence that the sweet bags are being under-filled.
 
 
 ---
